# pog

./: .containerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs
examples/assets_example/: assets.md
examples/findings_example/broken-auth/: finding.md
examples/findings_example/cleartext-passwords/: finding.md
examples/findings_example/clickjacking/: finding.md
examples/findings_example/cmd-injection/: finding.md
examples/findings_example/default-creds/: finding.md
examples/findings_example/exposed-admin/: finding.md
examples/findings_example/exposed-env/: finding.md
examples/findings_example/idor-profiles/: finding.md
examples/findings_example/insecure-cors/: finding.md
examples/findings_example/insecure-websocket/: finding.md
examples/findings_example/internal-api-ssrf/: finding.md
examples/findings_example/jwt-weak-secret/: finding.md
examples/findings_example/log4j/: finding.md
examples/findings_example/open-redirect/: finding.md
examples/findings_example/open-s3-bucket/: finding.md
examples/findings_example/privilege-escalation/: finding.md
examples/findings_example/prototype-pollution/: finding.md
examples/report_template_example/: template.tmpl  template.typ
models/: Cargo.toml
models/src/: asset.rs  finding.rs  graph.rs  lib.rs  severity.rs  status.rs
src/: log.rs  main.rs
storage/: Cargo.toml
storage/src/: db.rs  error.rs  import.rs  lib.rs  pogdir.rs  report.rs
tui/: Cargo.toml
tui/src/: app.rs  lib.rs  tui.rs  widgets.rs
(+15 files in other folders)
