[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
rusqlite = { version = "0.35", features = ["bundled"] }
thiserror = "2"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14"
typst = "0.14"
tempfile = "3"

[dev-dependencies]
